k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chitsetu-prod-ingress
  namespace: chitsetu-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: DOMAIN_NAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chitsetu-frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chitsetu-backend
                port:
                  number: 8080
